<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/dp5">

    <TextView
        android:layout_marginLeft="@dimen/dp5"
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_03_04"
        android:textColor="@color/et_hint_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/_450_00"
        android:textColor="@color/et_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/periods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_01_12"
        android:textColor="@color/et_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/repayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="@string/repayment"
        android:textColor="@color/et_text_color"
        android:textSize="16sp" />
</LinearLayout>