<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_22sp"
            android:layout_margin="@dimen/dp10"
            android:text="@string/mobile_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_in_mobile"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

    <Button
        android:id="@+id/input_seleted_btn"
        style="@style/Buttom_with"
        android:text="@string/put" />
</LinearLayout>
