<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <View style="@style/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_20sp"
            android:layout_width="0dp"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/please_in_name"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <View style="@style/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_20sp"
            android:layout_width="0dp"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:gravity="right"
            android:imeOptions="actionNext"
            android:text="@string/mobile_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_mobile_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="请输入您的手机号"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

    <View style="@style/Line" />

    <LinearLayout
        android:id="@+id/ll_select_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_20sp"
            android:layout_width="0dp"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:gravity="right"
            android:text="所在地区"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:id="@+id/province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="浙江省"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="金华市"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/district"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="婺城区"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp5"
                android:src="@drawable/right" />
        </LinearLayout>


    </LinearLayout>

    <View style="@style/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_20sp"
            android:layout_width="0dp"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:gravity="right"
            android:text="详细地址"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_address_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="请输入详细地址"
            android:inputType="text" />

    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginBottom="@dimen/dp30" />

    <Button
        android:id="@+id/btn_put"
        style="@style/Buttom_with"
        android:text="@string/put" />

</LinearLayout>
