<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView

            style="@style/Text_20sp"
            android:layout_margin="@dimen/dp6"
            android:text="@string/mobile_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_in_mobile"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

    <View style="@style/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_20sp"
            android:layout_margin="@dimen/dp6"
            android:text="@string/check_code"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_check_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入验证码"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/btn_get_checkcode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp20"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/shape_button_with_bg"
            android:text="获取验证码"
            android:textColor="@color/white" />
    </LinearLayout>

    <View style="@style/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            style="@style/Text_20sp"
            android:layout_margin="@dimen/dp6"
            android:text="新密码"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="请输入你的新密码"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1" />
    </LinearLayout>

    <View style="@style/Line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_20sp"
            android:layout_margin="@dimen/dp6"
            android:text="重复    "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_again_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="再次输入您的新密码"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_password_put"
        style="@style/Buttom_with"
        android:text="确定" />
</LinearLayout>
